atualizacao do requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 pandas==1.4.3
 seaborn==0.11.2
+scikit-learn==1.1.2               
+seaborn==0.11.2              
+matplotlib==3.5.2               
+mlxtend==0.20.0              
+numpy==1.23.1
+tqdm==4.64.0
